--- a/src/content/posts/translations/olddungeonmaaster-metals.mdx
+++ b/src/content/posts/translations/olddungeonmaaster-metals.mdx
@@ -32,6 +32,9 @@ cover: ~/assets/covers/olddungeonmaster-metals.webp
 | Сталь           | 4                             | Черный металл  | 19 | Сталь представляет собой сплав железа и углерода.                                                                                                                                                                                                                                  |
 | Олово           | 0,3                           | Цветной металл | 12 | Мягкий серебристо-белый металл, который часто сочетается с другими металлами или используется как слой для защиты различных металлов.                                                                                                                                              |
 
+
+Большая часть приведенной ниже информации взята из "VoLo's Guide to All Things Magical".
+
 ## Адамант
 Это чистая металлическая форма твердой, черной ферромагнитной руды, известной как адамантит, из которой изготавливается знаменитый сплав адамантин. В природе адамант встречается редко, но если и встречается, то всегда в виде больших сферических карманов в застывших вулканических потоках. Адамант - одно из самых твердых известных веществ, но при этом он хрупок. Меч из адаманта способен перерубить большинство металлов, но при ударе другим клинком или даже ловко пущенной в ход деревянной дубиной он сломается.
 
