--- a/src/content/posts/translations/olddungeonmaster-nonstandard-materials.mdx
+++ b/src/content/posts/translations/olddungeonmaster-nonstandard-materials.mdx
@@ -1,5 +1,5 @@
 ---
-title: Стоимость металлов в D&D
+title: Специальные материалы для оружия и доспехов
 description: ПЕРЕВОД Статьи Olddungeonmaster посвященной нестандартным материалом для оружия и доспехов
 date: 2023-10-24 18:00
 tags:
