--- a/src/content/posts/translations/yora-what-is-function-of-stronghold.mdx
+++ b/src/content/posts/translations/yora-what-is-function-of-stronghold.mdx
@@ -10,7 +10,7 @@ tags:
   - Yora
 author: Yora
 translator: Антон "Palant" Палихов
-cover: example
+cover: ~assets/covers/what-is-function-of-stronghold.png
 ---
 
 [Оригинал](https://spriggans-den.com/2022/04/11/whats-the-function-of-a-stronghold)
@@ -26,6 +26,8 @@ cover: example
 Строительство базы в Kenshi - это во многом экономический симулятор, в котором вы решаете, как распределить персонажей по разным рабочим местам, оптимизировать рабочие процессы, управлять ресурсами и вкладывать прибыль в новые технологии и расширение производства. Это очень весело на компьютере, который берет на себя всю математику, и вы проводите за этим занятием часы напролет в одиночестве. Это не то, что можно перенести на ролевую игру в группе. Все правила строительства крепостей для ролевых игр, с которыми я сталкивался до сих пор, не работают именно из-за этого. Но защита крепости от налетчиков и необходимость отправляться в опасные дикие земли, чтобы добыть ресурсы, необходимые для поддержания и расширения базы, также бесконечно увлекательны, а ведь эти занятия - повседневный хлеб с маслом для искателей приключений в D&D.
 
 Меня очень заинтриговала идея дать игрокам инструменты для захвата любой заброшенной или расчищенной руины, отремонтировать ее, укрепить и использовать в качестве основной базы, пока они исследуют окружающую дикую местность. И после некоторых размышлений на эту тему я считаю, что лучший способ подойти к этому - не начинать с механики модернизации базы или прейскурантов на различные дополнения, а сначала выяснить, какие функции должна выполнять крепость в игре, которая в основе своей все еще состоит из походов в подземелья для поиска сокровищ. На самом деле, это всего лишь обдумывание некоторых идей и обработка моих собственных мыслей по этому поводу.
+
+![Для чего нужна твердыня](https://cyborgsandmages.com/images/what-is-function-of-stronghold-1.jpg)
 
 ## Для чего нужна твердыня
 
@@ -44,6 +46,9 @@ cover: example
 **Проблемы с соседями:** Даже при наличии надежных укреплений и наемной охраны сокровища и припасы, хранящиеся в крепости, будут привлекать всевозможных людей и существ. Некоторые из них, возможно, захотят устроить набег, а другие просто не примут новых жителей на своей территории. Возможности для приключений, выходящих за рамки стандартной охоты за сокровищами, безграничны, и при этом игрокам не нужно отправляться в погоню за готовыми приключениями. Умиротворение окрестностей - хороший способ дать игрокам возможность проявить инициативу и разобраться в ситуации так, как они сами придумают, не давая им злодея с планом, который нужно остановить, пока не стало слишком поздно.
 
 ## Для чего не следует использовать твердыню
+
+![Для чего не следует использовать твердыню](https://cyborgsandmages.com/images/what-is-function-of-stronghold-2.jpg)
+
 **Экономический симулятор:** Как я уже говорил, управление ресурсами и разработка производственных систем может быть очень увлекательным занятием, если вы играете один на компьютере, но это не то, что подходит для ролевой игры. Добавление кузницы в свою крепость или строительство водяного насоса для колодца, работающего от ветра, может быть интересным и увлекательным занятием, но я считаю, что оно не должно превращаться в игру по управлению ресурсами.
 
 **Получение дохода:** В Kenshi я начинал свою первую базу с небольшого шахтерского лагеря, чтобы просто добывать руду, переплавлять ее в металлические пластины и продавать их в соседнем городе, чтобы заработать деньги, на которые я мог бы купить все необходимое, например, еду и лекарства. Сделать опорный пункт самодостаточным и даже прибыльным - идея интересная, но это прямо противоречит общей идее кампании и одной из основных целей создания базы. Расходы на содержание опорного пункта призваны обеспечить финансовое давление, чтобы ПИ не уходили в подземелье на поиски новых сокровищ. Оплот, являющийся источником денег, а не великанской денежной ямой, будет работать совершенно противоположным образом. Хотя землевладельцы со слугами, работающими на них, могут быть интересной идеей для некоторых ролевых игр, в данном случае она просто не подходит.
