--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -86,3 +86,11 @@ links:
 Также у нас есть телеграмм канал, группа телеграмм и простенький телеграмм бот для выдачи базовой информации
 
 </Aside>
+
+---
+
+## Поддержка сайта
+
+На всю нашу деятельность расходуются ресурсы и время.
+
+Как поддержать нашу деятельность вы можете узнать в разделе [Поддержать проект](https://cyborgsandmages.com/support-us)
