--- a/src/content/singles/support-us.mdx
+++ b/src/content/singles/support-us.mdx
@@ -4,6 +4,9 @@ description: Способы поддержки проекта Киборги и 
 date: 2023-10-30
 ---
 
+Нами было принято важное решение - что весь материал и вся наша работа, которая завязана на сообщество выкладывается в сообществе бесплатно - без каких либо pay-wall-ов, поэтому нам особо нечего предложить тем, кто нас поддерживает кроме чистой благодарности.
+
+---
 
 Поддержать проект вы можете на следующих площадках:
 
@@ -54,6 +57,4 @@ https://www.paypal.com/donate/?hosted_button_id=KUGTV2MR449S2
 ## :seven: D&D Beyond
 
 Вы всегда можете купить нам новую книгу на D&D Beyond в подарок.
-
-## 
 
