--- a/src/content/posts/articles/index-city-campaigns.mdx
+++ b/src/content/posts/articles/index-city-campaigns.mdx
@@ -57,6 +57,30 @@ tags:
 
 ---
 
+## Прочие индексы статей
+
+[Вождение городских кампаний](https://cyborgsandmages.com/posts/articles/index-сity-campaigns)
+
+[Тактика существ и столкновения с ними](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index)
+
+[Социальные столкновения](https://cyborgsandmages.com/posts/articles/index-social-encounters)
+
+[Деятельность простоя](https://cyborgsandmages.com/posts/articles/index-downtime)
+
+[Экономика D&D](https://cyborgsandmages.com/posts/articles/index-economy)
+
+[Создание магических предметов D&D](https://cyborgsandmages.com/posts/articles/index-creating-magic-items)
+
+[Наемные солдаты и наемники D&D](https://cyborgsandmages.com/posts/articles/index-hirelings)
+
+[Исследование гексов](https://cyborgsandmages.com/posts/articles/index-hexcrawl)
+
+[Твердыня](https://cyborgsandmages.com/posts/articles/index-stronghold)
+
+[Массовые сражения](https://cyborgsandmages.com/posts/articles/index-mass-combat)
+
+---
+
 Также вам может быть интересно посмотреть на полный [Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
 
 Вы найдете там немало полезной информации.
