--- a/src/content/posts/articles/index-city-campaigns.mdx
+++ b/src/content/posts/articles/index-city-campaigns.mdx
@@ -79,6 +79,8 @@ tags:
 
 [Массовые сражения](https://cyborgsandmages.com/posts/articles/index-mass-combat)
 
+[Проверки характеристик](https://cyborgsandmages.com/posts/articles/index-skill-checks)
+
 ---
 
 Также вам может быть интересно посмотреть на полный [Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
