--- a/src/content/posts/articles/index-city-campaigns.mdx
+++ b/src/content/posts/articles/index-city-campaigns.mdx
@@ -47,6 +47,8 @@ tags:
 
 [20 ГОРОДСКИХ СОБЫТИЙ](https://cyborgsandmages.com/posts/articles/cityscape-20-gorodskih-sobytij)
 
+[ГОРОДСКИЕ КВАРТАЛЫ](https://cyborgsandmages.com/posts/articles/cityscape-gorodskie-kvartaly)
+
 ## Прочие переводы и статьи
 
 [Эд Гринвуд - Оживление города](https://cyborgsandmages.com/posts/translations/greenwood-ozhivlenie-goroda/)
