--- a/src/content/posts/articles/index-city-campaigns.mdx
+++ b/src/content/posts/articles/index-city-campaigns.mdx
@@ -61,7 +61,7 @@ tags:
 
 ## Прочие индексы статей
 
-[Вождение городских кампаний](https://cyborgsandmages.com/posts/articles/index-сity-campaigns)
+[Вождение городских кампаний](https://cyborgsandmages.com/posts/articles/index-city-campaigns)
 
 [Тактика существ и столкновения с ними](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index)
 
