--- a/src/content/posts/articles/index-stronghold.mdx
+++ b/src/content/posts/articles/index-stronghold.mdx
@@ -1,6 +1,6 @@
 ---
-title: Индекс статей и переводов про социальные столкновения
-description: АВТОРСКАЯ ПОДБОРКА статей и переводов про социальные столкновения
+title: Индекс статей и переводов про твердыни
+description: АВТОРСКАЯ ПОДБОРКА статей и переводов про твердыни и оплоты персонажей
 date: 2023-01-01 00:00
 tags:
   - Советы Мастеру
@@ -10,11 +10,13 @@ tags:
   - Core d20 RPG
   - перевод
   - translate
-  - Социальные столкновения
-  - Социальные взаимодействия
+  - Наемники
+  - Твердыня
+  - Оплот
+  - База
 ---
 
-Это тематическая сборка статей и переводов статей и материалов по НРИ, которые посвящены социальным столкновениям.
+Это тематическая сборка статей и переводов статей и материалов по НРИ, которые посвящены твердыням и оплотам персонажей.
 
 Индекс будет периодически обновляться по мере наполнения сайта дополнительными материалами.
 
@@ -22,18 +24,7 @@ tags:
 
 ---
 
-[Расширенные правила по социальным взаимодействиям и столкновениям](https://cyborgsandmages.com/posts/articles/social-encounters)
 
-[Социальные взаимодействия. Активный и описательный отыгрыш](https://cyborgsandmages.com/posts/articles/descriptive-and-acrive-roleplaying)
-
-[Про социальные механики, часть 1. Репутация](https://cyborgsandmages.com/posts/articles/about-social-mechanics)
-
-[Про социальные механики, часть 2. Контакты, связи и их отношение к персонажам](https://cyborgsandmages.com/posts/articles/about-social-mechanics-2)
-
-
-[Дополнение к расширенным правилам по социальным взаимодействиям и столкновениям](https://cyborgsandmages.com/posts/articles/social-encounters-2)
-
-[Социальные взаимодействия в ACKS II](https://cyborgsandmages.com/posts/articles/social-interactions-acks-ii)
 
 ---
 
