--- a/src/content/posts/articles/index-city-campaigns.mdx
+++ b/src/content/posts/articles/index-city-campaigns.mdx
@@ -49,6 +49,10 @@ tags:
 
 [ГОРОДСКИЕ КВАРТАЛЫ](https://cyborgsandmages.com/posts/articles/cityscape-gorodskie-kvartaly)
 
+Играем в городе
+
+Городские особенности классов
+
 ## Прочие переводы и статьи
 
 [Эд Гринвуд - Оживление города](https://cyborgsandmages.com/posts/translations/greenwood-ozhivlenie-goroda/)
