--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -426,6 +426,8 @@ Cypher v. Fate
 
 [Непроверено - порог внезапного урона](https://cyborgsandmages.com/posts/translations/alexandrian-untested-surprise-damage-threshold)
 
+[Превозмагая в одиночку Смауга - борьба за душу D&D](https://cyborgsandmages.com/posts/translations/alexandrian-soloing-smaug-struggle-for-soul-of-dnd)
+
 ## Модуль статуса кампании
 
 [Модуль статуса кампании: Корреспонденция](https://cyborgsandmages.com/posts/translations/alexandrian-campaign-status-module-correspondence)
