--- a/src/content/posts/articles/expert-creature-werewolf.mdx
+++ b/src/content/posts/articles/expert-creature-werewolf.mdx
@@ -7,12 +7,9 @@ tags:
   - Bestiary
   - Бестиарий
   - вервольф
-author: example
-translator: example
-cover: example
 ---
 
-В рубрике Expert Creatures будут размещаться измененные существа, представляющие собой большую опасность и связанные с этим правила.
+В рубрике **Expert Creatures** будут размещаться измененные существа, представляющие собой большую опасность и связанные с этим правила.
 
 Ниже представлен усиленный оборотень
 
