--- a/src/content/posts/translations/kobold-press-tome-of-heroes-equipment-and-tools.mdx
+++ b/src/content/posts/translations/kobold-press-tome-of-heroes-equipment-and-tools.mdx
@@ -134,6 +134,66 @@ author: Kobold Press
 
 **Шелковая веревка.** Веревка из шелка имеет 4 хита и может быть разорвана или отсоединена с помощью проверки Силы со сложностью 20.
 
-<table style="border-collapse:collapse" border="0"><colgroup><col style="width:219px"><col style="width:214px"><col style="width:213px"></colgroup><tbody valign="top"><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Предмет</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p><strong>Цена</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p><strong>Вес</strong></p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Боеприпасы</strong></p></td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Алхимический болт</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Патрон</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>2 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Инструменты ремесленника</strong></p></td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Инструменты пчеловода</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>50 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>10 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Инструменты свечника</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>20 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>6 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Инструменты садовода</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>8 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>10 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Инструменты оружейника</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>50 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>8 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Патронташ</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 см</p></td><td style="padding-left: 7px; padding-right: 7px"><p>-</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Бомбы</strong></p></td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Огненный</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>100 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>/ фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Портативный</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>60 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Горный</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>150 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>10 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Верблюжье седло</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>60 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>40 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Чехол для патронов</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Бутылка стихий</strong></p></td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Кислота</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>25 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Холод</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>50 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Огонь</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>50 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Молния</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>100 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Яд</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>100 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Гром</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>75 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Слоновье седло</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>150 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>90 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Эльфийские маскировочные листья</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>100 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>3 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Эльфийская книга заклинаний</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>75 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>4 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Плащ для планирования</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>200 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>2 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Абордажный крюк</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>200 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>10 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Порох</strong></p></td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Бочка</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>125 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>100 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Рог</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>3 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Бочонок</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>65 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>50 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Унция</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 см</p></td><td style="padding-left: 7px; padding-right: 7px"><p>-</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Свеча для уничтожения насе-комых</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>-</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Магазин, заводной арбалет</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>5 см</p></td><td style="padding-left: 7px; padding-right: 7px"><p>/ фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Магазин, дворфийский ре-вольверный мушкет</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Мантлет</strong></p></td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Большой</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>100 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>100 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Персональный</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>50 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>50 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Легкий</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>25 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>15 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Сфера памяти</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>300 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>/ фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Яд</strong></p></td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td><td style="padding-left: 7px; padding-right: 7px">&nbsp;</td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Пчелиный яд</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>350 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>—</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Темный сон</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>250 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>—</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Паста из слюны Упыря</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>100 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>—</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>гу</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>1800 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>—</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Порошок Караскары</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>600 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>—</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Сводящая с ума слепота</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>500 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>—</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Смола аконита</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>400 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>—</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Создатель теней</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>1000 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>—</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Сладкая месть</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>1500 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>—</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Сок упаса</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>350 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>—</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Саперная смола</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>50 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Иловая маска</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>5 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>/ фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Слизневый растворитель, цилиндр</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>350 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1,5 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Слизневый растворитель, сфера</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>75 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Хирургический набор</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>50 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>4 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Сфера путешествий</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>100 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>1 фнт</p></td></tr><tr><td style="padding-left: 7px; padding-right: 7px"><p><strong>Шелковый плащ</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>200 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>3 фнт</p></td></tr><tr style="background: #f2f2f2"><td style="padding-left: 7px; padding-right: 7px"><p><strong>Шелковая веревка</strong></p></td><td style="padding-left: 7px; padding-right: 7px"><p>20 зм</p></td><td style="padding-left: 7px; padding-right: 7px"><p>4 фнт</p></td></tr></tbody></table>
+| Предмет                                   | Цена    | Вес     |
+|-------------------------------------------|---------|---------|
+| Боеприпасы                                |         |         |
+| Алхимический болт                         | 1 зм    | 1 фнт   |
+| Патрон                                    | 2 зм    | 1 фнт   |
+| Инструменты ремесленника                  |         |         |
+| Инструменты пчеловода                     | 50 зм   | 10 фнт  |
+| Инструменты свечника                      | 20 зм   | 6 фнт   |
+| Инструменты садовода                      | 8 зм    | 10 фнт  |
+| Инструменты оружейника                    | 50 зм   | 8 фнт   |
+| Патронташ                                 | 1 см    | -       |
+| Бомбы                                     |         |         |
+| Огненный                                  | 100 зм  | / фнт   |
+| Портативный                               | 60 зм   | 1 фнт   |
+| Горный                                    | 150 зм  | 10 фнт  |
+| Верблюжье седло                           | 60 зм   | 40 фнт  |
+| Чехол для патронов                        | 1 зм    | 1 фнт   |
+| Бутылка стихий                            |         |         |
+| Кислота                                   | 25 зм   | 1 фнт   |
+| Холод                                     | 50 зм   | 1 фнт   |
+| Огонь                                     | 50 зм   | 1 фнт   |
+| Молния                                    | 100 зм  | 1 фнт   |
+| Яд                                        | 100 зм  | 1 фнт   |
+| Гром                                      | 75 зм   | 1 фнт   |
+| Слоновье седло                            | 150 зм  | 90 фнт  |
+| Эльфийские маскировочные листья           | 100 зм  | 3 фнт   |
+| Эльфийская книга заклинаний               | 75 зм   | 4 фнт   |
+| Плащ для планирования                     | 200 зм  | 2 фнт   |
+| Абордажный крюк                           | 200 зм  | 10 фнт  |
+| Порох                                     |         |         |
+| Бочка                                     | 125 зм  | 100 фнт |
+| Рог                                       | 3 зм    | 1 фнт   |
+| Бочонок                                   | 65 зм   | 50 фнт  |
+| Унция                                     | 1 см    | -       |
+| Свеча для уничтожения насе-комых          | 1 зм    | -       |
+| Магазин, заводной арбалет                 | 5 см    | / фнт   |
+| Магазин, дворфийский ре-вольверный мушкет | 1 зм    | 1 фнт   |
+| Мантлет                                   |         |         |
+| Большой                                   | 100 зм  | 100 фнт |
+| Персональный                              | 50 зм   | 50 фнт  |
+| Легкий                                    | 25 зм   | 15 фнт  |
+| Сфера памяти                              | 300 зм  | / фнт   |
+| Яд                                        |         |         |
+| Пчелиный яд                               | 350 зм  | —       |
+| Темный сон                                | 250 зм  | —       |
+| Паста из слюны Упыря                      | 100 зм  | —       |
+| гу                                        | 1800 зм | —       |
+| Порошок Караскары                         | 600 зм  | —       |
+| Сводящая с ума слепота                    | 500 зм  | —       |
+| Смола аконита                             | 400 зм  | —       |
+| Создатель теней                           | 1000 зм | —       |
+| Сладкая месть                             | 1500 зм | —       |
+| Сок упаса                                 | 350 зм  | —       |
+| Саперная смола                            | 50 зм   | 1 фнт   |
+| Иловая маска                              | 5 зм    | / фнт   |
+| Слизневый растворитель, цилиндр           | 350 зм  | 1,5 фнт |
+| Слизневый растворитель, сфера             | 75 зм   | 1 фнт   |
+| Хирургический набор                       | 50 зм   | 4 фнт   |
+| Сфера путешествий                         | 100 зм  | 1 фнт   |
+| Шелковый плащ                             | 200 зм  | 3 фнт   |
+| Шелковая веревка                          | 20 зм   | 4 фнт   |
 
 Источник: Kobold Press, Tome of Heroes
