--- a/src/content/posts/articles/traps-interesting-1.mdx
+++ b/src/content/posts/articles/traps-interesting-1.mdx
@@ -1,6 +1,6 @@
 ---
 title: Интересная ловушка
-description: "АВТОРСКА СТАТЬЯ - Интересная ловушка - Два парных глифа — первый с заклинанем **Полиморф** — превращая персонажа в Тирекса, а второй с **Убеждением**: \«Твои союзники были заменены допплегангерами, которые убили оригиналы. Отомсти за своих друзей!\»"
+description: "АВТОРСКА СТАТЬЯ - Интересная ловушка - Два парных глифа — первый с заклинанем **Полиморф** — превращая персонажа в Тирекса, а второй с **Убеждением** Твои союзники были заменены допплегангерами, которые убили оригиналы. Отомсти за своих друзей!"
 date: 2023-11-02 
 tags:
   - Ловушка
