--- a/src/content/posts/articles/index-city-campaigns.mdx
+++ b/src/content/posts/articles/index-city-campaigns.mdx
@@ -49,9 +49,11 @@ tags:
 
 [ГОРОДСКИЕ КВАРТАЛЫ](https://cyborgsandmages.com/posts/articles/cityscape-gorodskie-kvartaly)
 
-Играем в городе
+[Городские Возможности](https://cyborgsandmages.com/posts/articles/cityscape-gorodskie-vozmozhnosti)
 
-Городские особенности классов
+[Играем в городе](https://cyborgsandmages.com/posts/articles/cityscape-igraem-v-gorode)
+
+[Городские особенности классов](https://cyborgsandmages.com/posts/articles/cityscape-web-enhanced-chast-1)
 
 ## Прочие переводы и статьи
 
