--- a/src/content/posts/translations/alexandrian-secret-life-of-nodes-5.mdx
+++ b/src/content/posts/translations/alexandrian-secret-life-of-nodes-5.mdx
@@ -8,6 +8,7 @@ tags:
   - 'Советы Мастеру'
 author: Justin Alexander
 translator: Станислав "Drakzar" Иванов
+cover: ~assets/covers/the_alexandrian_splashes.png
 ---
 
 Перевод: Станислав Иванов
