--- a/src/content/posts/translations/alexandrian-the-many-types-of-balance.mdx
+++ b/src/content/posts/translations/alexandrian-the-many-types-of-balance.mdx
@@ -7,6 +7,7 @@ tags:
   - 'перевод'
   - 'баланс'
 author: Justin Alexander
+cover: ~assets/covers/the_alexandrian_splashes.png
 ---
 
 [Многообразие видов баланса Март 4, 2009](https://thealexandrian.net/wordpress/2500/roleplaying-games/the-many-types-of-balance)
