--- a/src/content/posts/translations/alexandrian-running-city.mdx
+++ b/src/content/posts/translations/alexandrian-running-city.mdx
@@ -1,7 +1,7 @@
 ---
 title: Вождение города
-description: `ПЕРЕВОД статьи Джастина Александера, посвященной Вождению городских кампаний #alexandrian #justinalexander #city #town #citycrawling #gmadvice #gmtips #translate` 
-date: 2023-11-02 T 10:11:51Z
+description: ПЕРЕВОД статьи Джастина Александера, посвященной Вождению городских кампаний
+date: 2023-11-02
 tags:
   - Город
   - Советы Мастеру
