--- a/src/content/posts/articles/about-armor-1.mdx
+++ b/src/content/posts/articles/about-armor-1.mdx
@@ -77,5 +77,5 @@ author: Лекса «ВЫдр»
 
 Статья опубликована в журнале «Ночная Ведьма» №7, февраль 2010 г.
 
-[Источник](https://stormtower.ru/interesnyie-mesta/zametki-o-dospehah.html>)
+[Источник](https://stormtower.ru/interesnyie-mesta/zametki-o-dospehah.html)
 
