--- a/src/content/posts/translations/medeival-demographics-for-dummies.mdx
+++ b/src/content/posts/translations/medeival-demographics-for-dummies.mdx
@@ -10,9 +10,10 @@ tags:
   - перевод
   - демография
   - средневековая деревня
-  - СЭД
-author: Джон Росс, © 1993, 1999
-translator: Орин
+  - Руководство Мастера
+  - Советы Мастеру
+author: "Джон Росс, © 1993, 1999"
+translator: "Орин"
 ---
 
 NB: Перевод текста приводится "As It Is", т.е. без корректуры переводчика. Мнение автора и переводчиков - две большие разницы. Основной смысл данного опуса ясно выразил Карл Маркс фразой о том, что "уровень развития общества определяется уровнем развития проиводительных сил." Если Вы дочитали до этого места и еще не плюнули значит:
