--- a/src/content/posts/core-d20/background-guard.mdx
+++ b/src/content/posts/core-d20/background-guard.mdx
@@ -6,6 +6,8 @@ tags:
 - D&D 5e
 - Core d20 RPG
 - Предыстория
+- Kobold Press
+author: Kobold Press
 ---
 
 В юности вы зарабатывали деньги на защите города, общины, каравана или своего покровителя. Возможно, вас обучал старый, убеленный сединами городской стражник, а может быть, вас заставил служить местный магистрат за ваши превосходные навыки, рост или интеллект. Как бы вы ни пришли к этой роли, вы преуспели в защите других.
