--- a/src/content/posts/articles/index-city-campaigns.mdx
+++ b/src/content/posts/articles/index-city-campaigns.mdx
@@ -21,6 +21,8 @@ tags:
 Если вам есть, что нам посоветовать - напишите в [Телеграм](https://t.me/cyborgs_and_mages) или [Discord](https://discord.gg/yrJqvCqU3w).
 
 ## Cityscape
+
+
 [ГОРОД СУТУЛАК](https://cyborgsandmages.com/posts/articles/cityscape-gorod-sutulak)
 
 [ГОРОД КЛИФФСАЙД](https://cyborgsandmages.com/posts/articles/cityscape-gorod-kliffsajd)
@@ -56,6 +58,10 @@ tags:
 [Городские особенности классов](https://cyborgsandmages.com/posts/articles/cityscape-web-enhanced-chast-1)
 
 ## Прочие переводы и статьи
+
+Джастин Александр - [Вождение города](https://cyborgsandmages.vercel.app/posts/translations/alexandrian-running-city)
+
+Джон Росс - [Средневековая Демография для Чайников](https://cyborgsandmages.vercel.app/posts/translations/medeival-demographics-for-dummies)
 
 [Эд Гринвуд - Оживление города](https://cyborgsandmages.com/posts/translations/greenwood-ozhivlenie-goroda/)
 
