--- a/src/content/posts/articles/about-mercenaries-3.mdx
+++ b/src/content/posts/articles/about-mercenaries-3.mdx
@@ -351,23 +351,23 @@ tags:
 
 Также помимо прямых затрат на содержание наемных солдат существуют и дополнительные вспомогательные затраты.
 
-Кузнец, обычный - 1 на 40 солдат
+**Кузнец, обычный** - 1 на 40 солдат
 
-Кузнец, бронник - 1 на 40 солдат
+**Кузнец, бронник** - 1 на 40 солдат
 
-Кузнец, оружейник - 1 на 80 солдат
+**Кузнец, оружейник** - 1 на 80 солдат
 
-Кожевенник - 1 на 40 солдат
+**Кожевенник** - 1 на 40 солдат
 
-Плотник - 1 на 40 солдат
+**Плотник** - 1 на 40 солдат
 
-Повары - 3 на 40 солдат
+**Повары** - 3 на 40 солдат
 
-Запас провизии на 1 месяц стоит 10 зм на 1 солдата и весит 60 фунтов. Таким образом, на 100 солдат необходимо дополнительно 1000 зм на стоимость продуктов и организовать перевозку 6000 фунтов провизии.
+Запас провизии на 1 месяц стоит 10 зм на 1 солдата и весит 60 фунтов. Таким образом, **на 100 солдат** необходимо дополнительно 1000 зм на стоимость продуктов и организовать перевозку **6000** фунтов провизии.
 
 А это включает в себя погонщиков, кучеров и прочих.
 
-[ПРОДОЛЖЕНИЕ СЛЕДУЕТ]()
+[ПРОДОЛЖЕНИЕ СЛЕДУЕТ](https://cyborgsandmages.com/posts/articles/about-mercenaries-4)
 
 ---
 
