--- a/src/content/posts/articles/about-frontier-demographics.mdx
+++ b/src/content/posts/articles/about-frontier-demographics.mdx
@@ -18,21 +18,26 @@ tags:
 • Наемники: умелые (skilled) и неумелые (untrained, nonskilled)
 • Разнообразнейшие НИП – обыватель, бандит, страж, ветеран, капитан бандитов, скаут и т.п.
 
-В Dragon of Icespire Peak появилась механика Sidekick-ов или же на русском – подручных, которые обладают упрощенными классами, похожими на классы для игровых персонажей, но без архетипов и упрощенными правилами построения – Expert, Warrior, Spellcaster
+В Dragon of Icespire Peak появилась механика Sidekick-ов или же на русском – подручных, которые обладают упрощенными классами, похожими на классы для игровых персонажей, но без архетипов и упрощенными правилами построения – **Expert**, **Warrior**, **Spellcaster**
 
 Дополнительный материал для анализа дает, к примеру, Storm King Thunder в котором приводятся следующие правила по экипажу корабля: **«обыватель** – 2 см/день, **бандит** – 2 зм/день, **капитан** – 10 зм/день». В Waterdeep Dragon Heist грань размывается – так **головорез** просит 2 см/день, а **ветеран** 2 зм/день. Подходы SKT и WDH друг другу противоречат, поэтому в дальнейшем я ориентируюсь на следующий подход, впрочем завязанный на Ed Greenwood Presents Forgotten Realms: неумелый наемник (unskilled hireling) соответствует **бандитам**, умелый наемник соответсвует **стражам**, а на верхней позиции умелого но все еще ординарного наемника находится **ветераны**.
 
 Дополнительную информацию нам дает также подход из старых редакций, в которых описывалось что жители фронтира как правило более подготовлены к сражениям, нежели обычные обыватели, что во второй редакции AD&D выражалось в дополнительных хитах, а в третьей редакции к дополнительному уровню Warrior-а (НИП класса в третьей редакции, упрощенной версии Fighter-а).
 
+## Шаблоны
+
 Для облегчения нашей задачи сделаем несколько дополнительных шаблонов, которые могут применяться к любому из существующих НИПов:
 
 **Специалист (Specialist)** – умеет обращаться с одним из видов инструментов и соответствующая характеристика у него равна 13, что в целом дает бонус +3 к проверкам. Примером такого специалиста может быть деревенский кузнец или обычный торговец.
 
+
 **Эксперт (Expert)** – мастерски владеет одним из видов инструментов – получая Экспертизу на владение этим видом инструмента и соответствующая характеристика у него равна 14 (+2), что обеспечивает бонус уже +6 к проверкам.
+
+## Житель Фронтира
 
 В качестве базового статблока для жителя фронтира (в частности Серебрянных Пределов) может использоваться немного измененный статблок бандита:
 
-## Житель Фронтира
+### Житель Фронтира
 *Средний гуманоид (любая раса), любое мировоззрение*
 
 **Класс Защиты** 12 (кожаный доспех)
@@ -53,3 +58,7 @@ tags:
 **Владение оружием и доспехами.** Житель фронтира владеет копьем, дубиной, коротким луком, булавой, ручным и боевым топором, легким арбалетом, кинжалом и легкими доспехами.
 
 **Владение инструментами.** Как правило житель фронтира владеет навыками работы хотя бы с одним инструментом
+
+---
+
+
