--- a/src/content/posts/cored20rpg/bestiary-1.mdx
+++ b/src/content/posts/cored20rpg/bestiary-1.mdx
@@ -9,11 +9,19 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
-[E5E BESTIARY REV 13](https://1drv.ms/w/s!Atcrhwwo1lBA2YMLOf2_oW923CRzlw?e=zKguUK)
+Типовые особенности существ
 
-[E5E BESTIARY REV 12](https://1drv.ms/w/s!Atcrhwwo1lBA1_AFBntbrfdY9VE5-A?e=i427eK)
+Типовые действия существ
 
-[ADDITIONAL STATBLOCKS](https://1drv.ms/w/s!Atcrhwwo1lBA19xPShMJ5qjesqPpaA?e=IkqJmE)
+Типовые бонусные действия существ
+
+Типовые реакции существ
+
+Типовые легендарные действия существ
+
+---
+
+Типовые шаблоны
 
 ---
 
@@ -21,24 +29,18 @@ author: Антон "Palant" Палихов
 
 ---
 
-ШАБЛОНЫ
-
-ОСОБЕННОСТИ
-
-ДЕЙСТВИЯ
-
-РЕАКЦИИ
-
-КЛАССОВЫЕ ОСОБЕННОСТИ
-
-ЧЕРТЫ
-
----
-
 [БЕСТИАРИЙ](https://cyborgsandmages.com/posts/core-d20/bestiary)
 
 [ПРО КОМАНДИРОВ И СОЛДАТ](https://cyborgsandmages.com/posts/core-d20/about-commanders-and-units)
 
+---
+
+
+[E5E BESTIARY REV 13](https://1drv.ms/w/s!Atcrhwwo1lBA2YMLOf2_oW923CRzlw?e=zKguUK)
+
+[E5E BESTIARY REV 12](https://1drv.ms/w/s!Atcrhwwo1lBA1_AFBntbrfdY9VE5-A?e=i427eK)
+
+[ADDITIONAL STATBLOCKS](https://1drv.ms/w/s!Atcrhwwo1lBA19xPShMJ5qjesqPpaA?e=IkqJmE)
 
 ---
 
