--- a/src/content/posts/cored20rpg/bestiary-templates.mdx
+++ b/src/content/posts/cored20rpg/bestiary-templates.mdx
@@ -9,3 +9,36 @@ tags:
   - Шаблоны
 author: Антон "Palant" Палихов
 ---
+
+
+ГОРДЛИНГ
+Орда - это общий термин, используемый для обозначения любого монстра, который хорошо работает в группах. Хотя стаи демонов и нежити являются наиболее обычными примерами ордынцев в действии, этот термин также может использоваться для обозначения организованных солдат, которые хорошо работают вместе.
+Навыки. Существо получает навык "Атлетика". Если оно уже владело этим навыком, то вместо него оно приобретает опыт в этом навыке.
+Тактика стаи. Существо %%creaturename%% имеет преимущество при броске атаки против существа, если хотя бы один из союзников существа находится в пределах 5 футов от него и союзник не дееспособен.
+Существо также получает одну из следующих особенностей.
+Тактики построений. Существо %%creaturename%% имеет преимущество в Спасбросках против очарования, испуга, захвата или Обездвиживания, пока оно находится в пределах 5 футов хотя бы от одного союзника.
+Групповое возмездие. Когда %%creaturename%% уменьшается до 0 хитов в результате атаки в ближнем бою, один союзник %%creaturename%% может использовать свою реакцию для атаки оружием ближнего боя против атакующего.
+Поведение толпы. %%creaturename%% может использовать свое бонусное действие, чтобы попытаться схватить или толкнуть существо, если хотя бы один из союзников этого существа находится в пределах 5 футов от него и союзник дееспособен.
+Властная стая. У %%creaturename%% есть преимущество при проверках на захват или отталкивание существа, если хотя бы один из союзников существа находится в пределах 5 футов от цели и союзник не дееспособен.
+Стая. Существо %%creaturename%% добавляет дополнительный кубик урона к своим броскам урона от оружия, находясь в пределах 5 футов от союзника, который не дееспособен.
+Атаки
+Удар щитом. Атака оружием ближнего боя: +4 к попаданию, досягаемость 5 футов, одна цель. Попадание: 3 (1к4 + 1) дробящего урона. Если цель большого или меньшего размера, она должна сделать спасбросок на силу КС 12, либо будет сбита с ног или отброшена на 5 футов (по выбору бойца).
+Бонусные действия
+Агрессивный натиск. %%creaturename%% перемещается на скорость, равную его скорости, к врагу, которого он может видеть или слышать. 
+Обезоруживающий удар. %%creaturename%% совершает атаку ближнего боя своим копьем. При попадании цель делает спасбросок на силу КС 15. При провале предмет по выбору %%creaturename%%, который держит цель (включая щит), вылетает из ее захвата и приземляется в пространстве по выбору %%creaturename%% в 10 футах от нее.
+Бросок сети. Атака дальнобойным оружием: +7 к попаданию, дальность 5/15 футов, одна цель. Попадание: Крупная, средняя или мелкая цель подвергается Обездвиживанию сетью, пока не освободится. Существо может использовать свое действие для проверки силы КС 15, в случае успеха освобождая себя или другое существо в пределах досягаемости. Сеть представляет собой объект с КЗ 10, 5 хитами и иммунитетом к дробящему урону.
+Удар щитом Если цель большого или меньшего размера, она должна совершить Спасбросок силы КС 12 или будет сбита с ног или отброшена на 5 футов (по выбору %%creaturename%%).
+Порыв щита. %%creaturename%% делает атаку своим щитом. При попадании цель делает Спасбросок на ловкость КС 15, при провале падает на землю.
+Тактическое движение. До конца хода %%creaturename%% их скорость уменьшается вдвое, а их передвижение не провоцирует атаки по возможности.
+Ранить противника. %%creaturename%% совершает атаку ближнего боя своим копьем. При попадании цель получает рану, наносящую 5 (1d10) ед. колющего урона. Существо может прекратить непрерывный урон, забинтовав рану действием или наложив на цель магическое излечение.
+Реакции
+Противодействие критическому попаданию. Когда существо, которое видит %%creaturename%%, наносит %%creaturename%% критическое попадание атакой оружием ближнего боя, %%creaturename%% делает атаку копьем.
+Уклонение и бросок. Когда существо, которое видит %%creaturename%%, промахивается по гладиатору атакой оружием ближнего боя, %%creaturename%% перемещается на 15 футов, не провоцируя атаки возможности.
+Удар стража. Если противник в радиусе 5 футов от %%creaturename%% атакует цель, отличную от %%creaturename%%, этот противник провоцирует возможность атаки от %%creaturename%%.
+Off-Hand Counter. Когда %%creaturename%% промахивается по атаке ближнего боя атакующего, которого он может видеть в пределах 5 футов, %%creaturename%% делает атаку шорт-сквордом против атакующего.
+Парирование. Если атакующий наносит %%creaturename%% удар в ближнем бою и %%creaturename%% видит атакующего, он может добавить 2 (1d4) к своему КЗ против начальной атаки, при условии, что он владеет оружием ближнего боя.
+Защита. Когда атакующий, которого видит %%creaturename%%, делает бросок атаки против существа, находящегося в пределах 5 футов от %%creaturename%%, %%creaturename%% может наложить помеху на бросок атаки.
+Ответный удар. Когда %%creaturename%% промахивается по атаке ближнего боя атакующего, которого он видит в пределах 5 футов, %%creaturename%% делает атаку рапирой против атакующего с преимуществом.
+Блокировка щитом. Если атакующий наносит %%creaturename%% удар в ближнем бою и %%creaturename%% видит атакующего, он может добавить 2(1к4) к своему КЗ против начальной атаки, при условии, что он владеет оружием ближнего боя.
+
+Бросок противника. Когда существо, которое видит %%creaturename%%, промахивается по %%creaturename%%% атакой оружием ближнего боя, оно совершает Спасбросок Ловкости КС 15. В случае провала оно отталкивается на 15 футов от %%creaturename%%.
